5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3995/executions/1592_2426.log
== TEST (2019-03-25 15:36:55) 
-- CODE:
var1=float(input("tempo"))
var2=float(input("velocidade:"))
distancia= var2*var1
quantidade de litros= distancia/var1
print(distancia)
print(quantidade de litros)
-- ERROR:
File "XXXX", line 4
    quantidade de litros= distancia/var1
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 15:37:03) 
-- CODE:
var1=float(input("tempo"))
var2=float(input("velocidade:"))
distancia= var2*var1
litros= distancia/var1
print(distancia)
print(quantidade de litros)
-- ERROR:
File "XXXX", line 6
    print(quantidade de litros)
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 15:37:17) 
-- CODE:
var1=float(input("tempo"))
var2=float(input("velocidade:"))
distancia= var2*var1
litros= distancia/var1
print(distancia)
print(litros)
-- OUTPUT:
900.0
100.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 15:37:17) 
-- CODE:
var1=float(input("tempo"))
var2=float(input("velocidade:"))
distancia= var2*var1
litros= distancia/var1
print(distancia)
print(litros)
-- OUTPUT:
900.0
100.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 15:37:17) 
-- CODE:
var1=float(input("tempo"))
var2=float(input("velocidade:"))
distancia= var2*var1
litros= distancia/var1
print(distancia)
print(litros)
-- OUTPUT:
900.0
100.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 15:37:17) 
-- CODE:
var1=float(input("tempo"))
var2=float(input("velocidade:"))
distancia= var2*var1
litros= distancia/var1
print(distancia)
print(litros)
-- OUTPUT:
900.0
100.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 15:37:17) 
-- CODE:
var1=float(input("tempo"))
var2=float(input("velocidade:"))
distancia= var2*var1
litros= distancia/var1
print(distancia)
print(litros)
-- OUTPUT:
900.0
100.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 15:38:00) 
-- CODE:
var1=float(input("tempo"),"h")
var2=float(input("velocidade:"),"km/h")
distancia= var2*var1
litros= distancia/var1
print(distancia)
print(litros)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    var1=float(input(),"h")
TypeError: float() takes at most 1 argument (2 given)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 15:38:08) 
-- CODE:
var1=float(input("tempo"),"h")
var2=float(input("velocidade:"),"km/h")
distancia= var2*var1
litros= distancia/var1
print(distancia)
print(litros)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    var1=float(input(),"h")
TypeError: float() takes at most 1 argument (2 given)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 15:38:27) 
-- CODE:
var1=float(input("tempo"))
var2=float(input("velocidade:"))
distancia= var2*var1
litros= distancia/var1
print(distancia)
print(litros)
-- OUTPUT:
900.0
100.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 15:38:37) 
-- CODE:
var1=float(input("tempo"))
var2=float(input("velocidade:"))
distancia= var2*var1
litros= distancia/var1
print(distancia)
print(litros)
-- EXECUTION TIME:
0.232302
-- TEST CASE 1:
---- input:
9
100
---- correct output:
900.0
75.0
---- user output:
900.0
100.0
-- TEST CASE 2:
---- input:
5
120

---- correct output:
600.0
50.0

---- user output:
600.0
120.0
-- TEST CASE 3:
---- input:
1.2
80
---- correct output:
96.0
8.0

---- user output:
96.0
80.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 15:38:42) 
-- CODE:
var1=float(input("tempo"))
var2=float(input("velocidade:"))
distancia= var2*var1
litros= distancia/var1
print(distancia)
print(litros)
-- OUTPUT:
900.0
100.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 15:40:21) 
-- CODE:
var1=float(input("tempo"))
var2=float(input("velocidade:"))
distancia= var2*var1
litros= distancia/12
print(distancia)
print(litros)
-- OUTPUT:
900.0
75.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 15:40:43) 
-- CODE:
var1=float(input("tempo"))
var2=float(input("velocidade:"))
distancia= var2*var1
litros= distancia/12
print(distancia)
print(litros)
-- EXECUTION TIME:
0.21123
-- TEST CASE 1:
---- input:
9
100
---- correct output:
900.0
75.0
---- user output:
900.0
75.0
-- TEST CASE 2:
---- input:
5
120

---- correct output:
600.0
50.0

---- user output:
600.0
50.0
-- TEST CASE 3:
---- input:
1.2
80
---- correct output:
96.0
8.0

---- user output:
96.0
8.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
